<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_root"
    tools:context="com.gilangkusumajati.popularmoviestage2.MovieDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_poster"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/primary_text_size"
                tools:text="@string/sample_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/release_date"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/secondary_text_size"
                tools:text="@string/sample_release_date" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textview_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textSize="@dimen/primary_text_size"
        tools:text="@string/sample_overview" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/trailers"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/secondary_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_no_trailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textSize="@dimen/primary_text_size"
        tools:text="@string/no_trailers" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_trailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textSize="@dimen/large_text_size"
            tools:text="4.4" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_person" />

            <TextView
                android:id="@+id/textview_totalvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/small_text_size"
                tools:text="@string/sample_total_vote" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/reviews"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/secondary_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_no_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textSize="@dimen/primary_text_size"
        tools:text="@string/no_reviews" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>

